--- a/.eslintrc
+++ b/.eslintrc
@@ -16,21 +16,6 @@
       "import",
       "sort-imports-es6-autofix"
     ],
-    "import/order": [
-        "error",
-        {
-          "groups": [
-            "index",
-            "sibling",
-            "parent",
-            "internal",
-            "external",
-            "builtin",
-            "object",
-            "type"
-          ]
-        }
-      ],
     "rules": {
       "@typescript-eslint/explicit-module-boundary-types": "off",
       "import/order": [
@@ -48,11 +33,7 @@
               "parent"
             ]
           ],
-          "newlines-between": "always",
-          "alphabetize": {
-            "order": "asc",
-            "caseInsensitive": true
-          }
+          "newlines-between": "always"
         }
       ]
     }
