--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
     "jquery": "^3.6.0",
     "rimraf": "^3.0.2",
+    "sass": "^1.58.3",
     "vite": "^2.7.2",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-glsl": "^0.4.0"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^0.2.28",
     "gsap": "file:gsap-bonus.tgz",
     "locomotive-scroll": "^4.1.4",
     "raw-loader": "^4.0.2",
