--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vite-plugin-glsl": "^0.4.0"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^0.2.28",
     "gsap": "file:gsap-bonus.tgz",
     "vercel": "^28.2.5"
   }
