--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-javascript-webflow",
-  "version": "0.0.1",
-  "author": "armandsalle <armand.salle@gmail.com>",
+  "name": "stabondar-template",
+  "version": "0.1.0",
+  "author": "stabondar>",
   "license": "MIT",
   "type": "module",
   "scripts": {
@@ -25,6 +25,7 @@
     "vite-plugin-glsl": "^0.4.0"
   },
   "dependencies": {
+    "@finsweet/ts-utils": "^0.38.0",
     "@studio-freight/lenis": "^0.2.28",
     "gsap": "file:gsap-bonus.tgz",
     "vercel": "^28.2.5"
