--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@barba/core": "^2.9.7",
     "@barba/prefetch": "^2.1.10",
     "@finsweet/ts-utils": "^0.38.0",
-    "@studio-freight/lenis": "^0.2.28",
     "fontfaceobserver": "^2.3.0",
     "gsap": "file:gsap-bonus.tgz",
     "jquery-validation": "^1.19.5",
-    "vercel": "^31.2.3"
+    "lenis": "^1.1.3",
+    "vercel": "^34.2.7"
   }
 }
